--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <form class="form-inline">
   <div class="form-group">
-    <label for="exampleInputName2">Name</label>
+    <label for="exampleInputName2"> First Name</label>
     <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail2">Email</label>
+    <label for="exampleInputEmail2">Last Name</label>
     <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
   </div>
-  <button type="submit" class="btn btn-default">Send invitation</button>
+  <button type="submit" class="btn btn-default">Generate Letter</button>
 </form>
   </body>
   </html>
