Add the content of the letter.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
   <body>
     <form class="form-inline">
   <div class="form-group">
-    <label for="exampleInputName2"> First Name</label>
+    <label for="exampleInputName"> First Name</label>
     <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail2">Last Name</label>
+    <label for="exampleInputLast">Last Name</label>
     <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
   </div>
   <button type="submit" class="btn btn-default">Generate Letter</button>
 </form>
+<div id="letter">
+        <h1>How have you been?</h1>
+        <p>Dear <span class="exampleInputName"></span>, how are you? How is the weather in Portland? Anyway, I howe you have a good day. Sincerely, Anna and Vanessa.</p>
+      </div>
   </body>
   </html>
