Add finishing touches to css and index.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <title>A personalized letter.</title>
   </head>
   <body>
-    <form class="form-inline">
+    <form class="form-inline" id="blanks">
   <div class="form-group">
-    <label for="exampleInputName"> First Name</label>
+    <label for="exampleInputName2"> First Name</label>
     <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
   </div>
   <div class="form-group">
-    <label for="exampleInputLast">Last Name</label>
-    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+    <label for="exampleInputLast2">Last Name</label>
+    <input type="text" class="form-control" id="exampleInputLast2" placeholder="Jones">
   </div>
   <button type="submit" class="btn btn-default">Generate Letter</button>
 </form>
 <div id="letter">
         <h1>How have you been?</h1>
-        <p>Dear <span class="exampleInputName"></span>, how are you? How is the weather in Portland? Anyway, I howe you have a good day. Sincerely, Anna and Vanessa.</p>
+        <p>Dear <span class="exampleInputName2"></span>, how are you? How is the weather in Portland? Anyway, I howe you have a good day. Sincerely, Anna and Vanessa.</p>
       </div>
   </body>
   </html>
